<resources>
    <string name="app_name">Bin APP</string>
    <string name="hintEnterBin">Enter Bin</string>
    <string name="get_info">GET INFO</string>

    <string name="F1">F1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">TYPE</string>
    <string name="scheme_network">SCHEME/NETWORK</string>
    <string name="bank">BANK</string>
    <string name="history">HISTORY</string>
    <string name="brand">BRAND</string>
    <string name="prepaid">PREPAID</string>
    <string name="country">COUNTRY</string>
</resources>